--- a/dochadzka.html
+++ b/dochadzka.html
@@ -42,11 +42,17 @@
       </div>
     </nav>
     <nav class="nav_bar">
-        <img src="menu_icon.svg">
-        <p class="nav1">ŠJ Košice Rastislavova</p>
-        <p class="nav2">|</p>
-        <p class="nav3">Školské jedálne</p>
-        <button>Odhlásiť sa</button>
+        <div class="nav_gap">
+            <img src="menu_icon.svg">
+            <div class="nav_wrap">
+                <p class="nav1">ŠJ Košice Rastislavova</p>
+                <p class="nav2">|</p>
+                <p class="nav3">Školské jedálne</p>
+            </div>
+        </div>
+            <div class="button_div">
+                <button type="button">Odhlásiť sa</button>
+            </div>
     </nav>
     <nav class="main">
         <p class="header">Správa dochádzky</p>
