--- a/navbar.html
+++ b/navbar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="sprava_style.css">
+    <link rel="stylesheet" href="navbarcss.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
         </style>
@@ -54,48 +54,5 @@
                 <button type="button">Odhlásiť sa</button>
             </div>
     </nav>
-    <nav class="main">
-        <p class="header">Správa stravníkov</p>
-        <p class="desc">Stravníci v jedálni ŠJ Košice Rastislavova. Tu môžeš pridávať stravníkov a upravovať jednotlivých stravníkov</p>
-        <div class="main_div">
-            <label class="meno" for="select_meno">Vyhľadávanie podľa mena</label>
-            <select class="select_meno">
-                <option>Meno</option>
-              </select>
-              <label class="stravnik "for="select_stravnik">Typ stravníka</label>
-              <select class="select_stravnik">
-                <option>Žiak</option>
-              </select>
-              <div class="button_div2">
-              <button class="button_pridat">Pridať stravníka</button>
-            </div>
-        <table class="table">
-            <tr>
-                <th>Meno</th>
-                <th>Typ</th>
-                <th>Koeficient</th>
-                <th>Hmotná núdza</th>
-            </tr>
-            <tr>
-                <td class="name">Diana Bocáková</td>
-                <td class="type">Žiak</td>
-                <td class="ratio">1.45</td>
-                <td class="need"><input type="checkbox"></td>
-            </tr>
-            <tr>
-                <td class="name">Mrkva Mrkvová</td>
-                <td class="type">Dospelý</td>
-                <td class="ratio">2.0</td>
-                <td class="need"><input type="checkbox"></td>
-            </tr>
-            <tr>
-                <td class="name">Hlin Hlinová</td>
-                <td class="type">Zamestnanec</td>
-                <td class="ratio">1.75</td>
-                <td class="need"><input type="checkbox"></td>
-            </tr>
-        </table>
-        </div>
-    </nav> 
 </body>  
 </html>
