--- a/prihlasenie.html
+++ b/prihlasenie.html
@@ -11,9 +11,7 @@
 </head>
 <body>
     <nav class="nav_bar">
-        <svg class="menu_icon">
-            <path d="M0 16V13.3333H24V16H0ZM0 9.33333V6.66667H24V9.33333H0ZM0 2.66667V0H24V2.66667H0Z" fill="white"/>
-            </svg>  
+        <img src="menu_icon.svg">
         <p class="nav_text">Školské jedálne</p>          
     </nav>     
     <nav class="login_form">
