--- a/sprava.html
+++ b/sprava.html
@@ -18,7 +18,7 @@
       </select>
       <div class="div1">
       <img src="icon_settings.svg" class="settings1">
-      <p class="sprava">Domov</p>
+      <p class="sprava">Správa Jedálne</p>
       </div>
       <div class="div2">
       <img src="apps_icon.svg" class="apps">
