--- a/navbar.html
+++ b/navbar.html
@@ -13,6 +13,7 @@
     <nav class="side_nav">
         <p class="side_nav_main_text">Skolskejedalne.sk</p>
       <label class="spravovana" for="select_spravovana">Aktuálne spravovaná jedáleň</label>
+      <img class="dropdown_icon"src="dropdown_icon.svg">
       <select class="select_spravovana">
         <option>ŠJ Košice Rastislavova</option>
       </select>
